# Franka-Panda-BallCatcher

./: .gitignore  README.md  final.repos  trajectory_prediction.py
cad_models/: catchers_6in_net.STEP  catchers_grippers.STEP
catchers_vision/: package.xml  setup.cfg  setup.py
catchers_vision/calib/: my_eob_calib.calib
catchers_vision/catchers_vision/: aruco.py  ball_track.py  cv.py  sound.py  stream.py  stream_tester.py  test_stream.py  traj_pred_node.py  trajectory_prediction.py  zed.py  zed_node.py
catchers_vision/config/: aruco_params.yaml  ball_track.yaml  traj_pred.yaml
catchers_vision/launch/: aruco.launch.xml  calib.launch.xml  detect-zed.launch.xml  detect.launch.xml  detect_zed.launch.xml  publish.launch.xml
catchers_vision/test/: conftest.py  test_cv.py  test_traj_pre.py
catchers_vision_interfaces/: CMakeLists.txt  package.xml
zed_cam/: package.xml  setup.cfg  setup.py
zed_cam/config/: zed_driver.yaml
zed_cam/launch/: zed_driver.launch.xml
zed_cam/zed_cam/: zed_driver.py
